# scarp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
crates/objv-convert/: Cargo.toml
crates/objv-convert/src/: main.rs
crates/objv-format/: Cargo.toml
crates/objv-format/src/: lib.rs
crates/objv-geom/: Cargo.toml
crates/objv-geom/src/: lib.rs
crates/objv-obj/: Cargo.toml
crates/objv-obj/src/: lib.rs
crates/objv-viewer/: Cargo.toml
crates/objv-viewer/src/: lib.rs  overlay.wgsl  shader.wgsl
tools/: converttest.mjs  package.json  reloadtest.mjs  sectiontest.mjs  shot.mjs  tooltest.mjs
web/: convert-worker.js  index.html  sample.objv
